cards overlap on iphone6 fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -359,7 +359,7 @@ a {
     width: 82%;
     padding-top: 8%;
     margin-left: -8%;
-    margin-bottom: 12%;
+    margin-bottom: 20%;
     background: #fff;
     border: 1px solid #ddd;
     border-top-left-radius: 2em;
@@ -367,7 +367,7 @@ a {
     position: relative;
     display: block;
     text-align: center;
-    height: 76vh;
+    height: 79vh;
   }
   .phone-div {
     background-color: #0366d061;
